# bimdatabase

./: Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
db/: schema.pgsql
db/migrations/: r0001_to_r0002.pgsql  r0002_to_r0003.pgsql  r0003_to_r0004.pgsql  r0004_to_r0005.pgsql
src/: config.rs  filters.rs  main.rs  value_multiset.rs
templates/: add_edit.html  base.html  coupling_add_edit.html  coupling_list.html  index.html  macros.html
ts/: .gitignore  package.json
ts/src/: add_edit.ts  bimdatabase.ts  coupling_add_edit.ts
