[package]
name = "bimdatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12" }
ciborium = { version = "0.2" }
form_urlencoded = { version = "1.2" }
hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp"] }
once_cell = { version = "1.18" }
percent-encoding = { version = "2.3" }
regex = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.32", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
toml = { version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
