[package]
name = "bimdatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12" }
ciborium = { version = "0.2" }
form_urlencoded = { version = "1.2" }
http-body-util = { version = "0.1" }
hyper = { version = "1.2", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
once_cell = { version = "1.19" }
percent-encoding = { version = "2.3" }
regex = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.36", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
